--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="js.js"></script>
 </head>
 <body>
-    <div class="container">
+    <div class="sticky-header">
     </div>
 </body>
 </html>
